# Civitai-client

./: .DEBUG  Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  paginated.rs  types.rs  utils.rs
src/api/endpoints/: creators.rs  images.rs  mod.rs  models.rs
src/app/components/: app.rs  mod.rs  navbar.rs  textbox.rs
src/app/components/animations/: loading.rs  mod.rs
src/app/components/pages/: SPLASH  mod.rs  search.rs  splash.rs
src/app/components/pages/search/: img.rs  meta.rs  model.rs  modellist.rs
