[package]
name = "civitai-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
crossterm = "0.27.0"
futures = "0.3.29"
image = "0.24.7"
lazy_static = "1.4.0"
ratatui = "0.23.0"
ratatui-image = "0.4.1"
ratatui-textarea = { version = "0.4.0", features = ["ratatui"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
